added url aliases to remove .html

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,10 @@ http {
 
     location / {
       root /usr/local/src/john/;
+      if ($request_uri ~ ^/(.*)\.html$) {
+        return 302 /$1;
+      }
+      try_files $uri $uri.html $uri/ =404;
     }
 
     location /api/ {
