--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,13 +31,20 @@ http {
 
     index index.html;
 
-    location / {
-      root /usr/local/src/john/;
-      if ($request_uri ~ ^/(.*)\.html$) {
-        return 302 /$1;
-      }
-      try_files $uri $uri.html $uri/ =404;
+    # location / {
+    #   root /usr/local/src/john/;
+    #   if ($request_uri ~ ^/(.*)\.html$) {
+    #     return 302 /$1;
+    #   }
+    #   try_files $uri $uri.html $uri/ =404;
+    # }
+    
+    location ^~ /.well-known {
+      allow all;
+      root  /data/letsencrypt/;
     }
+
+
 
     location /api/ {
       proxy_pass http://app:5000;
