--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,9 @@ http {
       root  /data/letsencrypt/;
     }
 
-
+    location / {
+      return 301 https://$host$request_uri;
+    }
 
     location /api/ {
       proxy_pass http://app:5000;
