--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
     listen 80;
     listen [::]:80;
 
-    server_name _;
+    server_name *.benludwin.me;
 
     autoindex on;
     autoindex_format json;
@@ -52,5 +52,19 @@ http {
       proxy_pass http://app:5000;
     }
 
+  }
+  server {
+    listen 443 default_server;
+    server_name *.benludwin.me;
+    ssl on;
+    ssl_certificate /etc/letsencrypt/live/benludwin.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/benludwin.me/privkey.pem;
+location / {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+    }
   }
 }
