--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,13 +31,13 @@ http {
 
     index index.html;
 
-    # location / {
-    #   root /usr/local/src/john/;
-    #   if ($request_uri ~ ^/(.*)\.html$) {
-    #     return 302 /$1;
-    #   }
-    #   try_files $uri $uri.html $uri/ =404;
-    # }
+  #  location / {
+  #    root /usr/local/src/john/;
+  #    if ($request_uri ~ ^/(.*)\.html$) {
+  #      return 302 /$1;
+  #    }
+  #    try_files $uri $uri.html $uri/ =404;
+  #  }
     
     location ^~ /.well-known {
       allow all;
@@ -48,9 +48,9 @@ http {
       return 301 https://$host$request_uri;
     }
 
-    location /api/ {
-      proxy_pass http://app:5000;
-    }
+    #location /api/ {
+    #  proxy_pass http://app:5000;
+   # }
 
   }
   server {
@@ -59,12 +59,22 @@ http {
     ssl on;
     ssl_certificate /etc/letsencrypt/live/benludwin.me/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/benludwin.me/privkey.pem;
+
 location / {
+      root /usr/local/src/john/;
+      if ($request_uri ~ ^/(.*)\.html$) {
+        return 302 /$1;
+      }
+      try_files $uri $uri.html $uri/ =404;
+      #proxy_pass http://app:5000;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
+    }
+    location /api/ {
+      proxy_pass http://app:5000;
     }
   }
 }
