final changes to nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,9 +40,8 @@ http {
 
   }
   server {
-    listen 443 default_server;
+    listen 443 ssl;
     server_name *.benludwin.me;
-    ssl on;
     ssl_certificate /etc/letsencrypt/live/benludwin.me/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/benludwin.me/privkey.pem;
 
@@ -61,5 +60,7 @@ location / {
     location /api/ {
       proxy_pass http://app:5000;
     }
+
+    include perfect-forward-secrecy.conf;
   }
 }
