--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,30 +18,49 @@ http {
 
   keepalive_timeout  60;
 
-  #gzip  on;
-
   server {
     listen 80;
     listen [::]:80;
 
-    server_name _;
+    server_name *.benludwin.me;
 
     autoindex on;
     autoindex_format json;
 
     index index.html;
 
+    location ^~ /.well-known {
+      allow all;
+      root  /data/letsencrypt/;
+    }
+
     location / {
+      return 301 https://$host$request_uri;
+    }
+
+  }
+  server {
+    listen 443 ssl;
+    server_name *.benludwin.me;
+    ssl_certificate /etc/letsencrypt/live/benludwin.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/benludwin.me/privkey.pem;
+
+location / {
       root /usr/local/src/john/;
       if ($request_uri ~ ^/(.*)\.html$) {
         return 302 /$1;
       }
       try_files $uri $uri.html $uri/ =404;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
     }
-
     location /api/ {
       proxy_pass http://app:5000;
     }
 
+    include perfect-forward-secrecy.conf;
   }
 }
