manual merge of feature/https

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,13 @@ services:
       dockerfile: nginx/Dockerfile
     ports:
       - 80:80
+      - 443:443
     links:
       - app
     volumes:
+      - /etc/letsencrypt/:/etc/letsencrypt/
       - ./frontend:/usr/local/src/john/
+      - ./certs-data/:/data/letsencrypt/
   app:
     build:
       context: ./python
