--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - "db"
+    env_file:
+      - 'variables.env'
     environment:
       FLASK_PORT: 5000
       FLASK_APP: /usr/local/john/main.py
